Addslaches dans postit.php, correctif bug connexion mysqli

--- a/Admin/menu.html
+++ b/Admin/menu.html
@@ -7,6 +7,7 @@
         <div class="modal-body">
           Pseudo : <input type="text" class="form-control" id="inputPseudo" name="inputPseudo" placeholder="Text" required/><br/><br/>
           Mot de passe : <input type="password" class="form-control" id="inputPassword" name="inputPassword" placeholder="Password" required/><br/><br/>
+          <!-- ########## A éviter pour l'admin de garder la session ouverte non ? ########## -->
           <input type="checkbox" id="remindMe" name="remindMe"> Se souvenir de moi
         </div>
         <div class="modal-footer">
