--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <br/>
-<div class="row">
+<div class="row" style="margin-bottom: 20px">
     <div class="col-md-12">
     	<center>
 			<div id="footer">
