bouton fermer et creation de la page d upload de photos

--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -16,7 +16,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a class="navbar-brand" href="../traitement/photos.php"><h4>Gérer Photos</h4></a></li> 
+                    <li><a class="navbar-brand" href="../gestionPhoto"><h4>Gérer Photos</h4></a></li> 
                     <!-- envoi vers une page de photos qui permet de suprimmer modifier ajouter -->
                     <li><a class="navbar-brand" href="../traitement/reparations.php"><h4>Gérer Réparations</h4></a></li>
                     <!-- envoi vers une page de reparation qui permet de suprimmer modifier ajouter -->
@@ -46,7 +46,7 @@
             <a href="#" class="list-group-item list-group-item-success">Importer Calendrier google</a>
             <a href="#" class="list-group-item list-group-item-info">Modifier texte de l'acceuil</a>
             <a href="#" class="list-group-item list-group-item-warning">Modifier photos du slide</a>
-            <a href="#" class="list-group-item list-group-item-danger">Ajouter photos d'évenements</a>
+            <a href="../gestionPhoto/ajouer.php" class="list-group-item list-group-item-danger">Ajouter photos d'évenements</a>
             <a href="#" class="list-group-item list-group-item-danger">Supprimmer tous les adhérents</a>
             <a href="#" class="list-group-item list-group-item-danger">Aouter un historique de reunions</a>
             <a href="#" class="list-group-item list-group-item-danger">Voir les historiques</a>
