--- a/menulog.html
+++ b/menulog.html
@@ -10,20 +10,19 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="../accueil/index.php"><h4><div class="glyphicon glyphicon-home">Accueil</h4></a>
-
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
-      <li><a class="navbar-brand" href="../traitement/photos.php"><h4>Photos</h4></a></li>
-      <li><a class="navbar-brand" href="../traitement/calendrier.php"><h4>Calendrier</h4></a></li>
-      <li><a class="navbar-brand" href="../traitement/reparations.php"><h4>Réparations</h4></a></li>
-      <li><a class="navbar-brand" href="../traitement/velos.php"><h4>Vélos</h4></a></li>
+      <li><a class="navbar-brand" href="../accueil/index.php"><h4><div class="glyphicon glyphicon-home"></div>&nbsp;&nbsp;Accueil</h4></a></li>
+      <li><a class="navbar-brand" href="../traitement/photos.php"><h4><div class="glyphicon glyphicon-camera"></div>&nbsp;&nbsp;Photos</h4></a></li>
+      <li><a class="navbar-brand" href="../traitement/calendrier.php"><h4><div class="glyphicon glyphicon-calendar"></div>&nbsp;&nbsp;Évènements</h4></a></li>
+      <li><a class="navbar-brand" href="../traitement/reparations.php"><h4><div class="glyphicon glyphicon-wrench"></div>&nbsp;&nbsp;Réparations</h4></a></li>
+      <li><a class="navbar-brand" href="../traitement/velos.php"><h4><div class="glyphicon glyphicon-star"></div>&nbsp;&nbsp;Vélos</h4></a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a class="navbar-brand" href="../traitement/moncompte.php"><h4>Mon compte</h4></a></li>
+      <li><a class="navbar-brand" href="../traitement/moncompte.php"><h4><div class="glyphicon glyphicon-user"></div>&nbsp;&nbsp;Mon compte</h4></a></li>
       <li>
         <a href="#">
           <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modalDeconnnexion">
