--- a/menu.html
+++ b/menu.html
@@ -10,26 +10,16 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="../accueil/index.php"><h4><div class="glyphicon glyphicon-home"></div> Accueil</h4></a>
-
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
-      <li><a class="navbar-brand" href="../traitement/photos.php"><h4>Photos    <!--<div class="glyphicon glyphicon-camera"></div>--></h4></a></li>
-      <li><a class="navbar-brand" href="../traitement/calendrier.php"><h4><!-- Calendrier -->Évènements     <!--<div class="glyphicon glyphicon-calendar"></div>--></h4></a></li>
-      <li><a class="navbar-brand" href="../traitement/reparations.php"><h4>Réparations    <!--<div class="glyphicon glyphicon-wrench"></div>--></h4></a></li>
-      <!-- <li class="dropdown"> -->
-        <!-- <a href="#" class="navbar-brand dropdown-toggle" data-toggle="dropdown"><h4>Vélos <b class="caret"></b></h4></a>
-        <ul class="dropdown-menu"> -->
-      <li><a class="navbar-brand" href="../traitement/velos.php"><h4>Vélos    <!--<div class="glyphicon glyphicon-star"></div>--></h4></a></li>
-          <!-- <li class="divider"></li> -->
-          <!-- <li><a href="../traitement/vtt.php">VTT</a></li>
-          <li class="divider"></li>
-          <li><a href="../traitement/vtc.php">VTC</a></li> -->
-        </ul>
-      </li>
+      <li><a class="navbar-brand" href="../accueil/index.php"><h4><div class="glyphicon glyphicon-home"></div>&nbsp;&nbsp;Accueil</h4></a></li>
+      <li><a class="navbar-brand" href="../traitement/photos.php"><h4><div class="glyphicon glyphicon-camera"></div>&nbsp;&nbsp;Photos</h4></a></li>
+      <li><a class="navbar-brand" href="../traitement/calendrier.php"><h4><div class="glyphicon glyphicon-calendar"></div>&nbsp;&nbsp;Évènements</h4></a></li>
+      <li><a class="navbar-brand" href="../traitement/reparations.php"><h4><div class="glyphicon glyphicon-wrench"></div>&nbsp;&nbsp;Réparations</h4></a></li>
+      <li><a class="navbar-brand" href="../traitement/velos.php"><h4><div class="glyphicon glyphicon-star"></div>&nbsp;&nbsp;Vélos</h4></a></li>
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
