creation d albums par l admin

--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
     <div class="col-md-12">
     	<center>
 			<div id="footer">
-				<div class="panel-footer">
+				<div class="panel-footer" style="color : #999999;">
 					<!-- <p> -->
 						<a href="https://www.facebook.com/VelocampusDuLion" onclick="window.open(this.href); return false;">
 							<img src="../images/facebook.png" width="20" height="20">
@@ -13,7 +13,11 @@
 							<img src="../images/twitter.png" width="20" height="20">
 							</img>
 						</a>  
+						
 						- Copyright © 2014 VéloCampus | Tous droits réservés.
+
+						<a href="../Admin" style="color : #999999;"> Page d'administration</a>
+
 					<!-- </p> -->
 				</div>
 			</div>
