--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -18,7 +18,7 @@
                 <ul class="nav navbar-nav">
                     <li><a class="navbar-brand" href="../gestionPhoto"><h4>Gérer Photos</h4></a></li> 
                     <!-- envoi vers une page de photos qui permet de suprimmer modifier ajouter -->
-                    <li><a class="navbar-brand" href="../traitement/reparations.php"><h4>Gérer Réparations</h4></a></li>
+                    <li><a class="navbar-brand" href="../reparation"><h4>Gérer Réparations</h4></a></li>
                     <!-- envoi vers une page de reparation qui permet de suprimmer modifier ajouter -->
                     <li><a class="navbar-brand" href="../traitement/velos.php"><h4>Gérer Vélos</h4></a></li>
                     <!-- envoi vers une page de photos qui permet de suprimmer modifier ajouter -->
