ajout de la creation de location avec bug

--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -23,6 +23,7 @@
                     <li><a class="navbar-brand" href="../traitement/velos.php"><h4>Gérer Vélos</h4></a></li>
                     <!-- envoi vers une page de photos qui permet de suprimmer modifier ajouter -->
                     <!--<li><a href="#"><button type="button" class="btn btn-default" data-toggle="modal" data-target="#modalDeconnnexion">Importer calendrier</button></a></li>-->
+                    <li><a class="navbar-brand" href="../locations"><h4>Gérer Locations</h4></a></li>
 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
