Fichiers à part pour l'accueil (titre + contenu)

--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -46,7 +46,7 @@
         <div class="list-group">
             <a href="#" class="list-group-item list-group-item-success">Importer Calendrier google</a>
             <a href="#" class="list-group-item list-group-item-success" data-toggle="modal" data-target="#mailList" >Creer la mailling list</a>
-            <a href="#" class="list-group-item list-group-item-info">Modifier texte de l'acceuil</a>
+            <a href="#" class="list-group-item list-group-item-info">Modifier texte de l'accueil</a>
             <a href="#" class="list-group-item list-group-item-warning">Modifier photos du slide</a>
             <a href="../gestionPhoto/ajouer.php" class="list-group-item list-group-item-danger">Ajouter photos d'évenements</a>
             <a href="#" class="list-group-item list-group-item-danger">Supprimmer tous les adhérents</a>
