--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -46,9 +46,9 @@
         <div class="list-group">
             <a href="#" class="list-group-item list-group-item-success">Importer Calendrier google</a>
             <a href="#" class="list-group-item list-group-item-success" data-toggle="modal" data-target="#mailList" >Creer la mailling list</a>
-            <a href="#" class="list-group-item list-group-item-info">Modifier texte de l'accueil</a>
+            <a href="#" class="list-group-item list-group-item-info" data-toggle="modal" data-target="#modalModifAccueil">Modifier texte de l'accueil</a>
             <a href="#" class="list-group-item list-group-item-warning">Modifier photos du slide</a>
-            <a href="../gestionPhoto/ajouer.php" class="list-group-item list-group-item-danger">Ajouter photos d'évenements</a>
+            <a href="../gestionPhoto/ajouter.php" class="list-group-item list-group-item-danger">Ajouter photos d'évenements</a>
             <a href="#" class="list-group-item list-group-item-danger">Supprimmer tous les adhérents</a>
             <a href="#" class="list-group-item list-group-item-danger">Aouter un historique de reunions</a>
             <a href="#" class="list-group-item list-group-item-danger">Voir les historiques</a>
@@ -56,14 +56,6 @@
         </div>
     </div>
     <!-- cette div ce ferme dans demande inscription -->
-
-
-
-
-
-
-
-
 
 
     <!-- Modal Déconnexion -->
@@ -81,6 +73,32 @@
                     <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
                     <button type="button" class="btn btn-danger" onclick="document.location.href='../traitement/logout.php'">Se déconnecter</button>
                 </div>
+            </div>
+        </div> 
+    </div>
+
+    <!-- Modal modifier titre et contenu accueil -->
+    <?php $titre = fread(fopen("../../accueil/titre.txt","r"), filesize("../../accueil/titre.txt"));
+    $contenu = fread(fopen("../../accueil/contenu.txt", "r"), filesize("../../accueil/contenu.txt")); ?>
+    <div class="modal fade" id="modalModifAccueil" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel"><strong>Modification de l'accueil</strong></h4>
+                </div>
+                <form method="post" action="../traitement/modifAccueil.php">
+                    <div class="modal-body">
+                        Titre de la page d'accueil :<br/>
+                        <input id="titre" name="titre" type="text" value="<?php echo $titre;?>" required><br/><br/>
+                        Contenu de la page d'accueil :<br/>
+                        <textarea id="contenu" name="contenu" style="height:300px; width:540px" required> <?php echo $contenu;?> </textarea><br/>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Annuler</button>
+                        <button type="submit" class="btn btn-default">Modifier</button>
+                    </div>
+                </form>
             </div>
         </div> 
     </div>
@@ -153,10 +171,11 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Fermer</button>
 
             </div>
         </div>
     </div> 
+
 </div>
 
