--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -52,6 +52,7 @@
             <a href="#" class="list-group-item list-group-item-danger">Supprimmer tous les adhérents</a>
             <a href="#" class="list-group-item list-group-item-danger">Aouter un historique de reunions</a>
             <a href="#" class="list-group-item list-group-item-danger">Voir les historiques</a>
+            <a href="../../accueil/index.php" class="list-group-item list-group-item-danger">Voir le Site public</a>
             <a href="#" class="list-group-item list-group-item-danger">...</a>
         </div>
     </div>
