--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -20,7 +20,7 @@
                     <!-- envoi vers une page de photos qui permet de suprimmer modifier ajouter -->
                     <li><a class="navbar-brand" href="../reparation"><h4>Gérer Réparations</h4></a></li>
                     <!-- envoi vers une page de reparation qui permet de suprimmer modifier ajouter -->
-                    <li><a class="navbar-brand" href="../traitement/velos.php"><h4>Gérer Vélos</h4></a></li>
+                    <li><a class="navbar-brand" href="../velo"><h4>Gérer Vélos</h4></a></li>
                     <!-- envoi vers une page de photos qui permet de suprimmer modifier ajouter -->
                     <!--<li><a href="#"><button type="button" class="btn btn-default" data-toggle="modal" data-target="#modalDeconnnexion">Importer calendrier</button></a></li>-->
                     <li><a class="navbar-brand" href="../locations"><h4>Gérer Locations</h4></a></li>
