--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -24,7 +24,7 @@
                     <!-- envoi vers une page de photos qui permet de suprimmer modifier ajouter -->
                     <!--<li><a href="#"><button type="button" class="btn btn-default" data-toggle="modal" data-target="#modalDeconnnexion">Importer calendrier</button></a></li>-->
                     <li><a class="navbar-brand" href="../locations"><h4>Gérer Locations</h4></a></li>
-
+                    <li><a class="navbar-brand" href="../adherent"><h4>Gérer Adhérents</h4></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
 
@@ -44,13 +44,13 @@
 <div class="row">
     <div class="col-md-3" >
         <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-success">Importer Calendrier google</a>
+            <a href="#" class="list-group-item list-group-item-success">Voir Calendrier réunion</a>
             <a href="#" class="list-group-item list-group-item-success" data-toggle="modal" data-target="#mailList" >Creer la mailling list</a>
             <a href="#" class="list-group-item list-group-item-info" data-toggle="modal" data-target="#modalModifAccueil">Modifier texte de l'accueil</a>
-            <a href="#" class="list-group-item list-group-item-warning">Modifier photos du slide</a>
+            <!--<a href="#" class="list-group-item list-group-item-warning">Modifier photos du slide</a>-->
             <a href="../gestionPhoto/ajouter.php" class="list-group-item list-group-item-danger">Ajouter photos d'évenements</a>
-            <a href="#" class="list-group-item list-group-item-danger">Supprimmer tous les adhérents</a>
-            <a href="#" class="list-group-item list-group-item-danger">Aouter un historique de reunions</a>
+            
+            <a href="#" class="list-group-item list-group-item-danger">Ajouter un historique de reunions</a>
             <a href="#" class="list-group-item list-group-item-danger">Voir les historiques</a>
             <a href="../../accueil/index.php" class="list-group-item list-group-item-danger">Voir le Site public</a>
             <a href="#" class="list-group-item list-group-item-danger">...</a>
