--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -44,7 +44,7 @@
 <div class="row">
     <div class="col-md-3" >
         <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-success">Voir Calendrier réunion</a>
+            <a href="../calendrier" class="list-group-item list-group-item-success">Voir Calendrier réunion</a>
             <a href="#" class="list-group-item list-group-item-success" data-toggle="modal" data-target="#mailList" >Creer la mailling list</a>
             <a href="#" class="list-group-item list-group-item-info" data-toggle="modal" data-target="#modalModifAccueil">Modifier texte de l'accueil</a>
             <!--<a href="#" class="list-group-item list-group-item-warning">Modifier photos du slide</a>-->
