--- a/Admin/banniereMenuUpdate.html
+++ b/Admin/banniereMenuUpdate.html
@@ -1,5 +1,5 @@
 <div class="row"> 
   <div class="col-md-12">
-    <div class="alert alert-success"><center>Le texte de l'accueil à bien été modifié. Cliquez <a href="../../accueil/index.php">ici</a> pour voir votre modification.</center></div>
+    <div class="alert alert-success"><center>Le texte de l'accueil à bien été modifié. Cliquez <a href="../../accueil/index.php">ICI ! Là oui là, ici, voila,</a> pour voir votre modification.</center></div>
   </div>
 </div>
