--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -53,7 +53,8 @@
             <a href="#" class="list-group-item list-group-item-danger">Ajouter un historique de reunions</a>
             <a href="#" class="list-group-item list-group-item-danger">Voir les historiques</a>
             <a href="../../accueil/index.php" class="list-group-item list-group-item-danger">Voir le Site public</a>
-            <a href="#" class="list-group-item list-group-item-danger">...</a>
+            <a href="#" class="list-group-item list-group-item-success" data-toggle="modalChangemdp" data-target="#mailList" >Changer le mot de passe admin</a>
+            
         </div>
     </div>
     <!-- cette div ce ferme dans demande inscription -->
@@ -77,6 +78,37 @@
             </div>
         </div> 
     </div>
+
+<div class="modal fade" id="modalChangemdp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel"><strong>Changement de mot de passe</strong></h4>
+                </div>
+                <form method="post" action="../traitement/modifpasswd.php">
+                    <div class="modal-body">
+                        Ancien mot de passe :<br/>
+                        <input class="form-control" id="mdp0" name="mdp0" type="password" value="" required><br/><br/>
+                        Nouveau mot de passe :<br/>
+                        <input class="form-control" id="mdp1" name="mdp1" type="password" value="" required><br/><br/>
+                        Confirmer nouveau mot de passe :<br/>
+                        <input class="form-control" id="mdp1" name="mdp1" type="password" value="" required><br/><br/>
+                        
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Annuler</button>
+                        <button type="submit" class="btn btn-default">Modifier</button>
+                    </div>
+                </form>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                    <button type="button" class="btn btn-danger" onclick="document.location.href='../traitement/logout.php'">Se déconnecter</button>
+                </div>
+            </div>
+        </div> 
+    </div>
+
 
     <!-- Modal modifier titre et contenu accueil -->
     <?php $titre = fread(fopen("../../accueil/titre.txt","r"), filesize("../../accueil/titre.txt"));
