--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -42,10 +42,11 @@
     </div>
 </div>
 
-<?php if (isset($_SESSION['modif']) && $_SESSION['modif'] == "accueil") {
-      include("../banniereMenuUpdate.html");
-      $_SESSION['modif'] = "";
-    } ?>
+<?php 
+if (isset($_SESSION['modif']) && $_SESSION['modif'] == "accueil") {
+    include("../banniereMenuUpdate.html");
+     $_SESSION['modif'] = "";
+} ?>
 
 <div class="row">
     <div class="col-md-3" >
