--- a/banniereReparation.html
+++ b/banniereReparation.html
@@ -1,5 +1,5 @@
 <div class="row">
   <div class="col-md-12">
-    <div class="alert alert-success">Votre demande de réparation a bien été prise en compte !</div>
+    <div class="alert alert-success"><center>Votre demande de réparation a bien été prise en compte !</center></div>
   </div>
 </div>
