--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -93,7 +93,7 @@
             </div>
         </div> 
     </div>
-
+<!-- modal changement de mot de passe admin -->
 <div class="modal fade" id="modalChangemdp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
