--- a/footer.html
+++ b/footer.html
@@ -16,6 +16,8 @@
 						
 						- Copyright © 2014 VéloCampus | Tous droits réservés.
 
+						<a href="partenaires.php">Partenaires</a> - 
+
 						<a href="../Admin" style="color : #999999;"> Page d'administration</a>
 
 					<!-- </p> -->
