Page vidéo client

--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -17,7 +17,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a class="navbar-brand" href="../gestionPhoto"><h4>Gérer Photos</h4></a></li> 
+                    <li><a class="navbar-brand" href="../gestionPhoto"><h4>Gérer Fantasmes</h4></a></li> 
                     <!-- envoi vers une page de photos qui permet de suprimmer modifier ajouter -->
                     <li><a class="navbar-brand" href="../reparation"><h4>Gérer Réparations</h4></a></li>
                     <!-- envoi vers une page de reparation qui permet de suprimmer modifier ajouter -->
