--- a/menulog.html
+++ b/menulog.html
@@ -19,9 +19,9 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><h4><div class="glyphicon glyphicon-camera"></div>&nbsp;&nbsp;Médias</h4></a>
         <ul class="dropdown-menu">
-          <li><a href="traitement/photos.php">Photos</a></li>
+          <li><a href="../traitement/photos.php">Photos</a></li>
           <li class="divider"></li>
-          <li><a href="traitement/videos.php">Vidéos</a></li>
+          <li><a href="../traitement/videos.php">Vidéos</a></li>
         </ul>
       </li>
       <li><a class="navbar-brand" href="../traitement/calendrier.php"><h4><div class="glyphicon glyphicon-calendar"></div>&nbsp;&nbsp;Évènements</h4></a></li>
