--- a/menu.html
+++ b/menu.html
@@ -28,6 +28,17 @@
       <li><a class="navbar-brand" href="../traitement/calendrier.php"><h4><div class="glyphicon glyphicon-calendar"></div>&nbsp;&nbsp;Évènements</h4></a></li>
       <li><a class="navbar-brand" href="../traitement/reparations.php"><h4><div class="glyphicon glyphicon-wrench"></div>&nbsp;&nbsp;Réparations</h4></a></li>
       <li><a class="navbar-brand" href="../traitement/velos.php"><h4><div class="glyphicon glyphicon-star"></div>&nbsp;&nbsp;Vélos</h4></a></li>
+
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><h4><div class="glyphicon glyphicon-plus"></div>&nbsp;&nbsp;Infos</h4></a>
+        <ul class="dropdown-menu">
+          <li><a href="../traitement/photos.php">Les membres</a></li>
+          <li class="divider"></li>
+          <li><a href="../traitement/videos.php">Nous contacter</a></li>
+          <li class="divider"></li>
+          <li><a href="../traitement/videos.php">Les partenaires</a></li>
+        </ul>
+      </li>
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
