Page de contact

--- a/menu.html
+++ b/menu.html
@@ -32,11 +32,11 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><h4><div class="glyphicon glyphicon-plus"></div>&nbsp;&nbsp;Infos</h4></a>
         <ul class="dropdown-menu">
-          <li><a href="../traitement/photos.php">Les membres</a></li>
+          <li><a href="../traitement/contact.php">Nous contacter</a></li>
           <li class="divider"></li>
-          <li><a href="../traitement/videos.php">Nous contacter</a></li>
+          <li><a href="../traitement/membres.php">Les membres</a></li>
           <li class="divider"></li>
-          <li><a href="../traitement/videos.php">Les partenaires</a></li>
+          <li><a href="../traitement/partenaires.php">Les partenaires</a></li>
         </ul>
       </li>
     </ul>
