--- a/menu.html
+++ b/menu.html
@@ -89,7 +89,8 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
-          <button type="submit" class="btn btn-info">Valider</button>
+          <input type="submit" class="btn btn-info" id="Valider" name="Valider" value="Valider">
+          
         </div>
       </form>
     </div>
