--- a/menu.html
+++ b/menu.html
@@ -76,7 +76,7 @@
         <div class="modal-body">
         	<i>*</i> Nom : <input type="text" class="form-control" id="inputNom" placeholder="Ex : Dupont" name="inputNom" required/><br/><br/>
         	<i>*</i> Prenom : <input type="text" class="form-control" id="inputPrenom" placeholder="Ex : Jean" name="inputPrenom" required/><br/><br/>
-          <i>*</i> Date de naissance : <input type="date" class="form-control" id="inputDateNaissance" name="inputDateNaissance" required/><br/><br/>
+          <i>*</i> Date de naissance : <input type="date" class="form-control" id="inputDateNaissance" placeholder="Ex : 25-10-1994" name="inputDateNaissance" required/><br/><br/>
           <i>*</i> Adresse : <input type="text" class="form-control" id="inputAdresse" placeholder="Ex : 1 rue de la Paix" name="inputAdresse" required/><br/><br/>
           <i>*</i> Code Postal : <input type="text" class="form-control" id="inputCP" placeholder="Ex : 90000" name="inputCP" required/><br/><br/>
           <i>*</i> N° Tel : <input type="text" class="form-control" id="inputTelephone" placeholder="Ex : 0123456789" name="inputTelephone" required/><br/><br/>
@@ -84,12 +84,11 @@
           <div id="banniere"></div>
         	<i>*</i> Mot de passe : <input type="password" class="form-control" id="inputPassword" placeholder="Mot de passe" name="inputPassword" required/><br/><br/>
         	<i>*</i> Confirmer : <input type="password" class="form-control" id="inputConfirmPassword" placeholder="Mot de passe" name="inputConfirmPassword" required/><br/><br/>
-         
           <i>* Champs obligatoires. </i>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
-          <button type="submit" class="btn btn-info">Valider</button>
+          <button type="submit" class="btn btn-info" id="Submit">Valider</button>
         </div>
       </form>
     </div>
