Modifs menus + lien retour site

--- a/Admin/menu.html
+++ b/Admin/menu.html
@@ -11,7 +11,7 @@
           <input type="checkbox" id="remindMe" name="remindMe"> Se souvenir de moi
         </div>
         <div class="modal-footer">
-          
+          <p style="float:left"><b><a href="../..">Revenir à l'accueil</a></b></p>
           <button type="submit" class="btn btn-success">Se connecter</button>
         </div>
       </form>
