--- a/Admin/menulog.html
+++ b/Admin/menulog.html
@@ -17,7 +17,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a class="navbar-brand" href="../gestionPhoto"><h4>Gérer Fantasmes</h4></a></li> 
+                    <li><a class="navbar-brand" href="../gestionPhoto"><h4>Gérer Médias</h4></a></li> 
                     <!-- envoi vers une page de photos qui permet de suprimmer modifier ajouter -->
                     <li><a class="navbar-brand" href="../reparation"><h4>Gérer Réparations</h4></a></li>
                     <!-- envoi vers une page de reparation qui permet de suprimmer modifier ajouter -->
@@ -70,16 +70,16 @@
 <div class="row">
     <div class="col-md-3" >
         <div class="list-group">
-            <a href="../calendrier" class="list-group-item list-group-item-success">Voir Calendrier réunion</a>
+            <a href="../calendrier" class="list-group-item list-group-item-success">Voir calendrier réunion</a>
             <a href="#" class="list-group-item list-group-item-success" data-toggle="modal" data-target="#mailList" >Creer la mailling list</a>
             <a href="#" class="list-group-item list-group-item-info" data-toggle="modal" data-target="#modalModifAccueil">Modifier texte de l'accueil</a>
             <!--<a href="#" class="list-group-item list-group-item-warning">Modifier photos du slide</a>-->
             <a href="../gestionPhoto/ajouter.php" class="list-group-item list-group-item-danger">Ajouter photos d'évenements</a>
             
-            <a href="#" class="list-group-item list-group-item-danger">Ajouter un historique de reunions</a>
-            <a href="#" class="list-group-item list-group-item-danger">Voir les historiques</a>
-            <a href="../../accueil/index.php" class="list-group-item list-group-item-danger">Voir le Site public</a>
+            <!--<a href="#" class="list-group-item list-group-item-danger">Ajouter un historique de reunions</a>
+            <a href="#" class="list-group-item list-group-item-danger">Voir les historiques</a> -->
             <a href="#" class="list-group-item list-group-item-success" data-toggle="modal" data-target="#modalChangemdp" >Changer le mot de passe admin</a>
+            <a href="../../accueil/index.php" class="list-group-item list-group-item-danger">Voir le site public</a>
             
         </div>
     </div>
